fixes team grid on small resolutions like tablet

--- a/_sass/pages/homepage.scss
+++ b/_sass/pages/homepage.scss
@@ -17,6 +17,7 @@
 
   .col-right {
     text-align: right;
+    box-sizing: border-box;
 
     @include breakpoint($desktop-small) {
       padding-left: 65px;
